--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.1.4"
